style.css updated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="heading-container">
         <img id="img" src="./pics/idicon.png" alt="Drone Icon" class="heading-icon">
-        <h1 class="heading-title">History of Drones</h1>
+        <h1 class="heading-title">History of IG Drones</h1>
     </div>
     <div class="timeline-container">
         <div class="timeline-item active" id="item-1">
